# oxide

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  rustfmt.toml
.forgejo/workflows/: main.yml
.github/: FUNDING.yml
.github/workflows/: main.yml
basic_types/: Cargo.toml
basic_types/src/: blocks.rs  data_component.rs  enchantment.rs  item_modifier.rs  lib.rs  loot_table.rs  nbt.rs  predicate.rs  recipe.rs
client_lib/: Cargo.toml
client_lib/src/: lib.rs
data/: Cargo.toml
data/basic_types/: Cargo.toml
data/basic_types/src/: data_component.rs  data_component_predicate.rs  lib.rs  (+3 more)
data/biomes/: Cargo.toml
data/blockentity/: Cargo.toml
data/blocks/get_blocks/: Cargo.toml
data/blocks/get_blocks/src/: lib.rs
data/blocks/main/: Cargo.toml
data/blocks/main/src/: lib.rs
data/entities/: Cargo.toml
data/inventory/: Cargo.toml
data/items/: Cargo.toml
data/loot_tables/: Cargo.toml
data/main/: Cargo.toml
data/recipes/: Cargo.toml
data/src/: biomes.rs  blockentity.rs  entities.rs  inventory.rs  items.rs  lib.rs
data/tags/: Cargo.toml
data_generator_tools/: Cargo.toml
data_generator_tools/src/: blockentity.rs  blocks.rs  entities.rs  items.rs  loot_tables.rs  main.rs  recipe.rs  tags.rs
e2e_tests/: Cargo.toml
e2e_tests/src/: main.rs  tests.rs
lib/: Cargo.toml
lib/src/: containerclick.rs  deserialize.rs  lib.rs  serialize.rs  utils.rs
proxy/: Cargo.toml
proxy/src/: main.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs  packet_handlers.rs  terminal_input.rs
src/: main.rs
(+240 files in other folders)
