[package]
name = "block_get_blocks"
version = "0.5.1"
edition = "2024"
description = ""

[dependencies]
block_types = {path = "../types", version = "*"}
blocks_add_fn_0 = {path = "../add_functions/add_fn_0", version = "*"}
blocks_add_fn_1 = {path = "../add_functions/add_fn_1", version = "*"}
blocks_add_fn_2 = {path = "../add_functions/add_fn_2", version = "*"}
blocks_add_fn_3 = {path = "../add_functions/add_fn_3", version = "*"}
blocks_add_fn_4 = {path = "../add_functions/add_fn_4", version = "*"}
blocks_add_fn_5 = {path = "../add_functions/add_fn_5", version = "*"}
blocks_add_fn_6 = {path = "../add_functions/add_fn_6", version = "*"}
blocks_add_fn_7 = {path = "../add_functions/add_fn_7", version = "*"}
