[package]
  name = "blocks"
  version = "0.5.1"
  edition = "2024"
  description = ""

[dependencies]
block_types = {path = "../types", version = "*"}
block_get_blocks = {path = "../get_blocks", version = "*"}
block_get_type_from_block_state_id = {path = "../get_type_from_block_state_id", version = "*"}
