[package]
  name = "blocks"
  version = "0.6.0"
  edition = "2024"
  description = ""

[dependencies]
basic_types = {path = "../../../basic_types", version = "*"}
block_get_blocks = {path = "../get_blocks", version = "*"}
block_get_type_from_block_state_id = {path = "../get_type_from_block_state_id", version = "*"}
